# openerpdist

./: README.md  index.html  openerpdist.cabal  params.json
OpenERP/: Dist.hs
assets/: MANIFEST.in  setup.py
openerpcore/: MANIFEST.in  README.md  setup.py
