name:                openerpdist
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Packaging and distributing OpenERP
description:
  openerpdist builds the OpenERP framework and addons as nice tarballs, ready
  to be uploaded to pypi with minimal changes from upstream sources.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.be
homepage:            http://noteed.com/openerpdist
bug-reports:         https://github.com/noteed/openerpdist/issues
build-type:          Simple
data-files:          assets/MANIFEST.in assets/setup.py

source-repository head
  type: git
  location: https://github.com/noteed/openerpdist

library
  build-depends:       base == 4.*,
                       directory >= 1.1 && < 1.3,
                       filepath == 1.3.*,
                       language-python == 0.4.*,
                       process == 1.1.*
  exposed-modules:     OpenERP.Dist,
                       OpenERP.Dist.Descriptor
  ghc-options:         -Wall

executable openerpdist
  hs-source-dirs:      bin
  main-is:             openerpdist.hs
  build-depends:       base == 4.*,
                       cmdargs >= 0.9 && < 0.11,
                       openerpdist
  ghc-options:         -Wall

